--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
   "author": "AbrahamS <bramjulians@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
-  }
+    "prettier": "^1.18.2",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AbrahamJulian/cloudflare-2020-general-engineering-assignment.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/AbrahamJulian/cloudflare-2020-general-engineering-assignment/issues"
+  },
+  "homepage": "https://github.com/AbrahamJulian/cloudflare-2020-general-engineering-assignment#readme"
 }
