--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "AbrahamS <bramjulians@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "express": "^4.17.1",
     "prettier": "^1.18.2",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
